--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "seed:species": "tsx data/seed-species.ts",
+    "seed:categories": "tsx data/seed-categories.ts",
+    "seed:all": "tsx data/seed-species.ts && tsx data/seed-categories.ts"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
