--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:push": "drizzle-kit push",
     "seed:species": "tsx data/seed-species.ts",
     "seed:categories": "tsx data/seed-categories.ts",
+    "seed:admin": "tsx data/seed-admin.ts",
     "seed:all": "tsx data/seed-species.ts && tsx data/seed-categories.ts"
   },
   "dependencies": {
